@@ -1,6 +1,10 @@
 2007-09-05  Marcus Brinkmann  <marcus@g10code.de>
 
+	* Makefile.am (ICON_NAMES, ICON_SIZES, ICONS): New variables.
+	(gpgex_SOURCES): Add $(ICONS).
+
 	* Makefile.am (gpgex_LDADD): More -lws2_32 after ./libassuan.a.
+	
 
 2007-09-04  Marcus Brinkmann  <marcus@g10code.de>
 
